--- a/website/newsletter/263/index.mdx
+++ b/website/newsletter/263/index.mdx
@@ -1,9 +1,8 @@
 ---
 slug: /263
-title: "This Week In React #263: ..."
+title: "This Week In React #263: DoS, RSC Explorer, Base UI, shadcn, Blender, TanStack, Format.js | Hermes, Screens, Survey, React Navigation, ZoomGrid, Radon, TrueSheet, PagerView, Nitro | Node.js, TypeScript, Safari, State of HTML"
 authors: [filipkaminski, piaskowyk]
 date: 12-17-2025
-unlisted: true
 ---
 
 Hi everyone\! Filip and Krzysztof from [Software Mansion](https://swmansion.com/) here\! 👋
@@ -83,13 +82,13 @@ Where components are rendered is not the only thing that should receive attentio
 - 📖 Brand new [React Aria documentation](https://react-aria.adobe.com/getting-started) with interactive examples.
 - 📜 [Intro to performance of React Server Components](https://calendar.perfplanet.com/2025/intro-to-performance-of-react-server-components/) \- A deep and fair analysis of how RSC can improve page load time by shifting data fetching and rendering to the server, while also not keeping silent about the architectural trade-offs.
 - 📜 [How AI Coding Agents Hid a Timebomb in Our App](https://acusti.ca/blog/2025/12/09/how-ai-coding-agents-hid-a-timebomb-in-our-app/) \- Fun story where an infinite recursion bug was not immediately visible because it happened in the background due to leveraging the new `<Activity>` component.
-- [React Compiler’s Silent Failures (And How to Fix Them)](https://acusti.ca/blog/2025/12/16/react-compiler-silent-failures-and-how-to-fix-them/) \- When the Compiler can’t compile a component, it fails silently. The author discovered a secret ESLint rule `react-hooks/todo` that permits to fail-fast on patterns the Compiler doesn’t support yet.
+- 📜 [React Compiler’s Silent Failures (And How to Fix Them)](https://acusti.ca/blog/2025/12/16/react-compiler-silent-failures-and-how-to-fix-them/) \- When the Compiler can’t compile a component, it fails silently. The author discovered a secret ESLint rule `react-hooks/todo` that permits to fail-fast on patterns the Compiler doesn’t support yet.
 - 📜 [Driving 3D scenes in Blender with React](https://romanliutikov.com/blog/driving-3d-scenes-in-blender-with-react) \- A custom React reconcilier translates React operations into Python commands to communicate with the Blender API.
 - 💸 [React Certification – Junior, Mid, and Senior level certification. Exam only or full prep bundle with trial exam & labs. Choose your path. ](https://certificates.dev/react?friend=TWIR)
 - 📦 [shadcn 3.6 \- `npx shadcn create`](https://ui.shadcn.com/docs/changelog) \- With this new CLI, you can now create your own customized `shadcn` component library, using either Radix UI or Base UI. [Theo also released a video about this](https://www.youtube.com/watch?v=aKPaxQJs-30) if you want to learn more about what has changed.
 - 📦 [TanStack Start 1.141 \- Vue Start](https://github.com/TanStack/router/pull/6055): After React and Solid, TanStack Start adds support for Vue. TanStack Start really is a… framework-agnostic meta-framework? 🤪
 - 📦 [React Router 7.11 \- `vite preview` support, stabilize `onError` API, new `unstable_defaultShouldRevalidate` opt-out API](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v7110)
-- 📦 [Format JS for React \- multiple releases across many subpackages, featuring breaking changes and a conversion to ESM](https://github.com/formatjs/formatjs/releases/tag/react-intl%408.0.0)
+- 📦 [Format.JS for React \- Multiple releases, breaking changes and a conversion to ESM](https://github.com/formatjs/formatjs/releases/tag/react-intl%408.0.0)
 - 📦 [Recharts 3.6 \- New `BarStack` component, support for ranged stacked `BarChart`](https://github.com/recharts/recharts/releases/tag/v3.6.0)
 - 📦 [React Grid Layout 2.1 \- Support for large-scale layouts and custom constraints](https://github.com/react-grid-layout/react-grid-layout/releases/tag/2.1.0) \- you can test it in the [interactive docs’ showcase](https://react-grid-layout.github.io/react-grid-layout/examples/21-custom-constraints.html).
 - 📦 [Slot JSX \- Custom JSX pragma for powering asChild or render function prop patterns](https://github.com/jjenzz/slot-jsx-pragma)
@@ -161,7 +160,7 @@ It has been slimmed down to avoid overlap the State of React survey, focusing mo
 - 📜 [Why are my view transitions blinking?](https://piccalil.li/blog/why-are-my-view-transitions-blinking/) \- A deep dive into the `view-transition-name` CSS property.
 - 📜 [Symbol.iterator Is Pretty Neat, Actually](https://kettanaito.com/blog/symbol-iterator-is-pretty-neat-actually) \- An interesting use case where getting control over the spread operator improves DX.
 - 📦 [Safari 26.2 \- `commandfor`, Navigation API, Map Upsert, auto-expanding textareas, `scrollbar-color`, and more](https://webkit.org/blog/17640/webkit-features-for-safari-26-2/) \- A massive release, also unlocking cool APIs like the Navigation API that is now supported across all browsers\!
-- 📦[Node 24.12 \- Type stripping is now stable](https://nodejs.org/en/blog/release/v24.12.0): TypeScript support is officially stable in Node LTS\!
+- 📦 [Node 24.12 \- Type stripping is now stable](https://nodejs.org/en/blog/release/v24.12.0): TypeScript support is officially stable in Node LTS\!
 
 ---
 
