--- a/website/newsletter/263/index.mdx
+++ b/website/newsletter/263/index.mdx
@@ -63,7 +63,7 @@ More resources about the recent React vulnerabilities here:
 
 ![RSC Explorer](/emails/issues/263/rscexplorer.jpg)
 
-[**React Server Components Explorer**](https://github.com/gaearon/rscexplorer)
+[**React Server Components Explorer**](https://overreacted.io/introducing-rsc-explorer/)
 
 If recent security headlines had a silver lining, it’s the renewed interest in how React Server Components actually work under the hood. And Dan Abramov showed up just in time with [RSC Explorer](https://tangled.org/danabra.mov/rscexplorer), an interactive tool to help you visualize the wire format and master the mental model.
 
