--- a/website/newsletter/264/index.mdx
+++ b/website/newsletter/264/index.mdx
@@ -40,6 +40,8 @@ CodeRabbit has so far reviewed more than 10 million PRs, installed on 2 million 
 
 - 💸 [Product for Engineers - Your product ideas probably suck (that's ok)](https://go.posthog.com/twir-jan14)
 
+- 💸 [Building AI Voice Agents at Scale — The executive playbook from ElevenLabs](https://r2trck.com/twir-4)
+
 <SubscribeFormEmbed placement="middle" />
 
 ---
