--- a/website/newsletter/264/index.mdx
+++ b/website/newsletter/264/index.mdx
@@ -141,8 +141,6 @@ Note that Expo is also working on their own [solution for Widgets & Live Activit
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/264/meme.jpg)](https://x.com/sebastienlorber/status/1975502820393820260)
 
 See ya! 👋
