--- a/website/newsletter/264/index.mdx
+++ b/website/newsletter/264/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /264
 title: "This Week In React #264: ..."
-authors: [slorber]
+authors: [filipkaminski, kacperkapusciak]
 date: 01-14-2026
 unlisted: true
 ---
