--- a/website/newsletter/264/index.mdx
+++ b/website/newsletter/264/index.mdx
@@ -90,7 +90,7 @@ An advanced performance course from **Steve Kinney**, focused on diagnosing real
 
 ## 📱 React-Native {#react-native}
 
-![Voltra](/emails/issues/264/voltra.jpg)
+[![Voltra](/emails/issues/264/voltra.jpg)](https://www.callstack.com/blog/live-activities-and-widgets-with-react-say-hello-to-voltra)
 
 [**Voltra 1.0 \- Live Activities & Widgets with JSX in React Native**](https://www.callstack.com/blog/live-activities-and-widgets-with-react-say-hello-to-voltra)
 
