--- a/website/newsletter/264/index.mdx
+++ b/website/newsletter/264/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /264
-title: "This Week In React #264: ..."
+title: "This Week In React #264: Next.js, Immer, React Router, Waku Alpha, Ant Design, React Conf, | Voltra 1.0, RN 0.84 RC, Galeria, Nitro, Radon, Sonner Native, Rock | Chrome, Astro, Turborepo, Rspack"
 authors: [filipkaminski, kacperkapusciak]
 date: 01-14-2026
 unlisted: true
@@ -115,7 +115,7 @@ Note that Expo is also working on their own [solution for Widgets & Live Activit
 - 📦 [React Native 0.84 RC.0](https://github.com/facebook/react-native/releases/tag/v0.84.0-rc.0): Updates to React 19.2.3, lots of accessibility improvements, added `onKeyDown`/`onKeyUp` events
 - 📦 [Galeria 2.0 \- New transition style, corner radius interpolation, page indicators, blur overlay](https://github.com/nandorojo/galeria/releases/tag/v2.0.0)
 - 📦 [Nitro 0.33 \- `HybridViews` recycling and `UIView` subclasses support](https://github.com/mrousavy/nitro/releases/tag/v0.33.0)
-- 📦 [Radon IDE 1.15 \- Run Maestro tests directly in Radon](https://radon.swmansion.com/docs/getting-started/changelog#1.15.x)
+- 📦 [Radon 1.15 \- Run Maestro tests directly in Radon](https://radon.swmansion.com/docs/getting-started/changelog#1.15.x)
 - 📦 [Sonner Native 0.23 \- Toast library \- Added `positionStyle` prop](https://github.com/gunnartorfis/sonner-native/releases/tag/v0.23.0)
 - 📦 [Rock 0.12 \- Brownfield-ready modular toolkit \- Support for RN 0.83 & 0.82](https://github.com/callstackincubator/rock/releases/tag/v0.12.0)
 - 🎥 [Simon Grimm \- Choosing the Right React Native Stack in 2026](https://www.youtube.com/watch?v=LZFEr9QDIVg)
