--- a/website/newsletter/264/index.mdx
+++ b/website/newsletter/264/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /264
-title: "This Week In React #264: Next.js, Immer, React Router, Waku Alpha, Ant Design, React Conf, | Voltra 1.0, RN 0.84 RC, Galeria, Nitro, Radon, Sonner Native, Rock | Chrome, Astro, Turborepo, Rspack"
+title: "This Week In React #264: Next.js, Immer, React Router, Waku, Ant Design, React Conf, | Voltra 1.0, RN 0.84 RC, Galeria, Nitro, Radon, Sonner Native, Rock | Chrome, Astro, Turborepo, Rspack"
 authors: [filipkaminski, kacperkapusciak]
 date: 01-14-2026
 unlisted: true
