--- a/website/newsletter/264/index.mdx
+++ b/website/newsletter/264/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /264
-title: "This Week In React #264: Next.js, Immer, React Router, Waku, Ant Design, React Conf, | Voltra 1.0, RN 0.84 RC, Galeria, Nitro, Radon, Sonner Native, Rock | Chrome, Astro, Turborepo, Rspack"
+title: "This Week In React #264: Next.js, Immer, React Router, Waku, Ant, React Conf, | Voltra, 0.84 RC, Hermes, Galeria, Nitro, Radon, Facetpack, Sonner Native, Rock, Haptics | Chrome, Astro, Turborepo, Rspack, Rising Stars"
 authors: [filipkaminski, kacperkapusciak]
 date: 01-14-2026
 unlisted: true
@@ -8,11 +8,13 @@ unlisted: true
 
 Hi everyone\! Kacper and Filip from [Software Mansion](https://swmansion.com/) here\! 👋
 
+It's not too late—we're finally back from our Christmas break, and the entire newsletter team wishes you a happy new year!
+
 It seems like the winter break brought a lot of great articles from the community. While for some, early January is a time for reflection, summaries, and reviews of 2025, others can’t stop shipping.
 
-In the React space, we have a new version of Next.js 16.1, security fixes for React Router, and the announcement of the alpha version of Waku 1.0.
+In the React space, we have a new version of Next.js 16.1, security fixes for React Router, and the announcement of Waku 1.0 alpha.
 
-As for React Native, we have the release of Voltra, a new way to create Live Activities & Widgets in React, and a sneak peek of React Native 0.84 with Hermes v1 enabled by default.
+As for React Native, we have the release of Voltra, a new way to create Live Activities & Widgets, and a sneak peek of React Native 0.84 with Hermes v1 enabled by default.
 
 <!-- truncate -->
 
@@ -56,11 +58,11 @@ CodeRabbit has so far reviewed more than 10 million PRs, installed on 2 million 
 - 📦 [Immer 11.1 \- Performance improvements](https://github.com/immerjs/immer/releases/tag/v11.1.0)
 - 📦 [React Router 7.12 \- Security fixes](https://reactrouter.com/changelog#v7120)
 - 📦 [Waku 1.0 alpha \- Stable API surface](https://waku.gg/blog/waku-v1-alpha)
-- 📦 [Ant Design 6.2.0](https://github.com/ant-design/ant-design/releases/tag/6.2.0)
+- 📦 [Ant Design 6.2](https://github.com/ant-design/ant-design/releases/tag/6.2.0)
 - 🎥 [React Conf 2025 \- All the talks and interviews are now online](https://conf.react.dev/)
-- 🎥 [Theo \- I moved off of Next.js](https://www.youtube.com/watch?v=Sc5ca-VJdxY)
+- 🎥 [Theo \- I moved off of Next.js (to TanStack Start)](https://www.youtube.com/watch?v=Sc5ca-VJdxY)
 - 🎥 [Cosden Solutions \- The Better Way to Use React Query](https://www.youtube.com/watch?v=e2OC3aaiGhI)
-- 🎙️ [Meta Tech Podcast 82 \- 82: CSS at Scale with StyleX](https://insidefacebookmobile.libsyn.com/82-css-at-scale-with-stylex)
+- 🎙️ [Meta Tech Podcast 82 \- CSS at Scale with StyleX](https://insidefacebookmobile.libsyn.com/82-css-at-scale-with-stylex)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -134,7 +136,7 @@ Note that Expo is also working on their own [solution for Widgets & Live Activit
 - 📜 [NPM to implement staged publishing](https://socket.dev/blog/npm-to-implement-staged-publishing) \- The future plans for protecting against supply chain attacks.
 - 📦 [Chrome 144](https://developer.chrome.com/blog/new-in-chrome-144?hl=en) \- New `<geolocation>` element, Temporal API, and devtools improvements.
 - 📦 [Astro 6 beta \- Redesigned dev server experience](https://astro.build/blog/astro-6-beta/)
-- 📦 [Turborepo 2.7.0 \- DevTools, composable config](https://turborepo.dev/blog/turbo-2-7)
+- 📦 [Turborepo 2.7 \- DevTools, composable config](https://turborepo.dev/blog/turbo-2-7)
 - 📦 [Rspack 1.7 \- Final version before v2](https://rspack.rs/blog/announcing-1-7)
 
 ---
