--- a/website/newsletter/264/index.mdx
+++ b/website/newsletter/264/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /264
-title: "This Week In React #264: Next.js, Immer, React Router, Waku, Ant, React Conf, | Voltra, 0.84 RC, Hermes, Galeria, Nitro, Radon, Facetpack, Sonner Native, Rock, Haptics | Chrome, Astro, Turborepo, Rspack, Rising Stars"
+title: "This Week In React #264: Next.js, Immer, React Router, Waku, Ant, React Conf, | Voltra, 0.84 RC, Hermes, Galeria, Nitro, Radon, Facetpack, Rock, Haptics | Chrome, Astro, Turborepo, Rspack, Rising Stars"
 authors: [filipkaminski, kacperkapusciak]
 date: 01-14-2026
 ---
@@ -9,7 +9,7 @@ Hi everyone\! Kacper and Filip from [Software Mansion](https://swmansion.com/) h
 
 It's not too late—we're finally back from our Christmas break, and the entire newsletter team wishes you a happy New Year!
 
-It seems like the winter break brought a lot of great articles from the community. While for some, early January is a time for reflection, summaries, and reviews of 2025, others can’t stop shipping.
+The winter break brought a lot of great articles from the community. While for some, early January is a time for reflection, summaries, and reviews of 2025, others can’t stop shipping.
 
 In the React space, we have a new version of Next.js 16.1, security fixes for React Router, and the announcement of Waku 1.0 alpha.
 
@@ -95,11 +95,13 @@ An advanced performance course from **Steve Kinney**, focused on diagnosing real
 
 [**Voltra 1.0 \- Live Activities & Widgets with JSX in React Native**](https://www.callstack.com/blog/live-activities-and-widgets-with-react-say-hello-to-voltra)
 
-Voltra is a new library that allows React Native devs compose Live Activities and Widgets using SwiftUI primitives in just JSX, without having to write native code.
+Voltra is a new library that allows React Native devs to compose Live Activities and Widgets using SwiftUI primitives in just JSX, without having to write native code.
 
-While previous community attempts, such as [expo-apple-targets](https://github.com/EvanBacon/expo-apple-targets) or [expo-live-activity](https://github.com/software-mansion-labs/expo-live-activity), either supported a limited set of possible layouts or required knowledge of Swift, Voltra seems to overcome these limitations.
+While previous community attempts, such as [expo-apple-targets](https://github.com/EvanBacon/expo-apple-targets) or [expo-live-activity](https://github.com/software-mansion-labs/expo-live-activity), either supported a limited set of possible layouts or required knowledge of Swift, Voltra overcomes these limitations.
 
 Note that Expo is also working on their own [solution for Widgets & Live Activities](https://x.com/k7grzywacz/status/2000980494998175934) coming in Expo SDK 55\.
+
+---
 
 - 💸 [Radon PRO - turn your code editor into an integrated experience. Try it out and enjoy the best way to build React Native apps.](https://radon.swmansion.com/?utm_source=TWIR1)
 - 👀 [Hermes V1 enabled by default starting from React Native 0.84](https://github.com/reactwg/react-native-releases/issues/1202): A faster Hermes JS-engine added as experimental in RN 0.82 will be the standard in the next stable RN release.
@@ -112,7 +114,7 @@ Note that Expo is also working on their own [solution for Widgets & Live Activit
 - 📜 [Software Mansion \- React Native in 2026: Trends & Predictions](https://blog.swmansion.com/react-native-in-2026-trends-our-predictions-463a837420c7)
 - 📦 [RNSEC \- Security Scanner for React Native](https://www.rnsec.dev/): a CLI that scans RN & Expo apps for security vulnerabilities & hardcoded secrets
 - 📦 [Facetpack](https://github.com/ecrindigital/facetpack): Promising 36x faster Metro transforms for React Native using OXC in place of Babel
-- 📦 [RN Tickle \- AHAP-style haptics for React Native](https://github.com/Renegades-Studio/react-native-tickle): Supports transient & continuous haptics. Callable from UI Thread.
+- 📦 [Tickle \- AHAP-style haptics for React Native](https://github.com/Renegades-Studio/react-native-tickle): Supports transient & continuous haptics. Callable from UI Thread.
 - 📦 [React Native 0.84 RC.0](https://github.com/facebook/react-native/releases/tag/v0.84.0-rc.0): Updates to React 19.2.3, lots of accessibility improvements, added `onKeyDown`/`onKeyUp` events
 - 📦 [Galeria 2.0 \- New transition style, corner radius interpolation, page indicators, blur overlay](https://github.com/nandorojo/galeria/releases/tag/v2.0.0)
 - 📦 [Nitro 0.33 \- `HybridViews` recycling and `UIView` subclasses support](https://github.com/mrousavy/nitro/releases/tag/v0.33.0)
