--- a/website/newsletter/264/index.mdx
+++ b/website/newsletter/264/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /264
-title: "This Week In React #264: Next.js, Immer, React Router, Waku, Ant, React Conf, | Voltra, 0.84 RC, Hermes, Galeria, Nitro, Radon, Facetpack, Rock, Haptics | Chrome, Astro, Turborepo, Rspack, Rising Stars"
+title: "This Week In React #264: Next.js, Immer, React Router, Waku, Ant, React Conf, | Voltra, 0.84 RC, Hermes, RNSec, Galeria, Nitro, Radon, Facetpack, Rock, Haptics | Chrome, Astro, Turborepo, Rspack, Rising Stars"
 authors: [filipkaminski, kacperkapusciak]
 date: 01-14-2026
 ---
